# scic-webgui

./: LICENSE  MANIFEST.in  README.md  check.sh  publish.sh  pyproject.toml  upgrade.sh
.github/workflows/: test.yml
examples/: calculator.py
scic-webgui-0.1.0/: .gitignore
scic-webgui-0.1.0/.github/workflows/: publish.yml  test.yml
src/scic_webgui/: __init__.py  __main__.py  api.py  application.py  config.py  errors.py  loader.py  serialization.py  sessions.py
src/scic_webgui/static/: app.js  index.html  styles.css
src/scic_webgui/static/core/: activity.js  api.js  dashboard-extensions.js  extensions.js  helpers.js  state.js  theme.js
src/scic_webgui/static/renderers/: input.js  result.js
src/scic_webgui/static/styles/: dashboard.css  index.css
src/scic_webgui/themes/: __init__.py  builtin.py  model.py  registry.py
tests/: fakes.py  test_api.py  test_config.py  test_themes.py
