[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scic-webgui"
version = "0.2.0"
description = "Adaptive and extensible web application client for SCIC Framework"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Specter" }]
requires-python = ">=3.10"
dependencies = [
    "scic-framework>=0.2.3,<0.3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]
build = ["build>=1.2", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/specter327/scic-webgui"
Repository = "https://github.com/specter327/scic-webgui"
Issues = "https://github.com/specter327/scic-webgui/issues"

[project.scripts]
scic-webgui = "scic_webgui.__main__:main"

[project.entry-points."scic_webgui.themes"]
default = "scic_webgui.themes.builtin:theme_package"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scic_webgui*"]

[tool.setuptools.package-data]
scic_webgui = ["static/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["scic_webgui"]
